--- a/package.json
+++ b/package.json
@@ -59,16 +59,21 @@
     "@iconify-json/mdi": "1.2.1",
     "@iconify-json/twemoji": "1.2.1",
     "@nuxt/devtools": "^1.0.0",
+    "@nuxt/test-utils": "^3.14.4",
     "@nuxtjs/i18n": "8.5.5",
     "@types/adm-zip": "0.5.5",
     "@types/emoji-js": "3.5.2",
     "@types/request": "2.48.12",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "10.4.20",
     "eslint": "9.12.0",
+    "happy-dom": "^15.11.0",
     "nuxt": "^3.13.0",
     "nuxt-headlessui": "^1.1.4",
+    "playwright-core": "^1.48.2",
     "ufo": "^1.3.1",
-    "unplugin-icons": "0.19.3"
+    "unplugin-icons": "0.19.3",
+    "vitest": "^2.1.4"
   },
   "volta": {
     "node": "20.18.0"
