--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "autoprefixer": "10.4.20",
     "eslint": "9.12.0",
     "happy-dom": "^15.11.0",
+    "jsdom": "^25.0.1",
     "nuxt": "^3.13.0",
     "nuxt-headlessui": "^1.1.4",
     "playwright-core": "^1.48.2",
